--- a/mage_ai/frontend/styles/scss/abstracts/_colors-dark.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_colors-dark.scss
@@ -1,3 +1,64 @@
+$colors-black: #000000;
+$colors-blackFixed: #000000;
+$colors-blackLo: #00000033;
+$colors-blackMd: #00000099;
+$colors-blackHi: #000000D9;
+$colors-blue: #0500FF;
+$colors-blueHi: #0500FFD9;
+$colors-blueLo: #0500FF33;
+$colors-blueMd: #0500FFB3;
+$colors-blueMuted: #5AA6FF;
+$colors-blueText: #1F6BFF;
+$colors-teal: #00B4CC;
+$colors-tealHi: rgba(0, 180, 204, 0.5);
+$colors-tealLo: #00B4CC33;
+$colors-tealMd: #00B4CCB3;
+$colors-dbt: #FC6949;
+$colors-dbtHi: #FC6949D9;
+$colors-dbtLo: rgba(252, 105, 73, 0.3);
+$colors-dbtMd: rgba(252, 105, 73, 0.5);
+$colors-glow: #0500FF66;
+$colors-glow2: #0500FF;
+$colors-gray: #34404C;
+$colors-grayLo: #34404C33;
+$colors-grayMd: #34404CB3;
+$colors-grayHi: #34404CD9;
+$colors-green: #00C868;
+$colors-greenLo: #00C86833;
+$colors-greenMd: #00C868B3;
+$colors-greenHi: #00C868D9;
+$colors-pink: #DD55FF;
+$colors-pinkLo: #DD55FF33;
+$colors-pinkMd: #DD55FFB3;
+$colors-pinkHi: #DD55FFD9;
+$colors-purple: #956FFF;
+$colors-purpleLo: #956FFF33;
+$colors-purpleMd: #956FFFB3;
+$colors-purpleHi: #956FFFD9;
+$colors-red: #FF3B3B;
+$colors-redHi: #FF3B3BD9;
+$colors-redLo: #FF3B3B33;
+$colors-redMd: #FF3B3BB3;
+$colors-rose: #D1A2AB;
+$colors-roseHi: #D1A2ABD9;
+$colors-roseLo: #D1A2AB33;
+$colors-roseMd: #D1A2ABB3;
+$colors-sky: #9ECBFF;
+$colors-skyHi: rgba(106, 161, 224, 0.5);
+$colors-skyLo: #6AA1E0;
+$colors-skyMd: #9ECBFFB3;
+$colors-yellow: #FFCC19;
+$colors-yellowHi: #FFCC19D9;
+$colors-yellowLo: #FFCC1933;
+$colors-yellowMd: #FFCC19;
+$colors-white: #FFFFFF;
+$colors-whiteFixed: #FFFFFF;
+$colors-whiteLo: #FFFFFF80;
+$colors-whiteMd: #FFFFFF99;
+$colors-whiteHi: #FFFFFF1A;
+$colors-statuses-success: #8ADE00;
+$colors-statuses-successHi: rgba(138, 222, 0, 0.3);
+
 // themes/colors.ts -> abstracts/colors.scss
 // E6 is 90%
 // D9 is 85%
@@ -80,6 +141,7 @@ $fonts-color-text-base: #FFFFFF;
 $fonts-color-text-blue: #1F6BFF;
 $fonts-color-text-inverted: #000000;
 $fonts-color-text-muted: #FFFFFF99;
+$fonts-color-text-warning: $colors-yellow;
 $fonts-family-base-black: Inter Black, sans-serif;
 $fonts-family-base-bold: Inter Bold, sans-serif;
 $fonts-family-base-lightFont: Inter Light, sans-serif;
@@ -150,66 +212,6 @@ $scrollbars-border-radius-thumb: 40px;
 $scrollbars-border-radius-track: 10px;
 $scrollbars-width-thumb: 4;
 $scrollbars-width-track: 6;
-$colors-black: #000000;
-$colors-blackFixed: #000000;
-$colors-blackLo: #00000033;
-$colors-blackMd: #00000099;
-$colors-blackHi: #000000D9;
-$colors-blue: #0500FF;
-$colors-blueHi: #0500FFD9;
-$colors-blueLo: #0500FF33;
-$colors-blueMd: #0500FFB3;
-$colors-blueMuted: #5AA6FF;
-$colors-blueText: #1F6BFF;
-$colors-teal: #00B4CC;
-$colors-tealHi: rgba(0, 180, 204, 0.5);
-$colors-tealLo: #00B4CC33;
-$colors-tealMd: #00B4CCB3;
-$colors-dbt: #FC6949;
-$colors-dbtHi: #FC6949D9;
-$colors-dbtLo: rgba(252, 105, 73, 0.3);
-$colors-dbtMd: rgba(252, 105, 73, 0.5);
-$colors-glow: #0500FF66;
-$colors-glow2: #0500FF;
-$colors-gray: #34404C;
-$colors-grayLo: #34404C33;
-$colors-grayMd: #34404CB3;
-$colors-grayHi: #34404CD9;
-$colors-green: #00C868;
-$colors-greenLo: #00C86833;
-$colors-greenMd: #00C868B3;
-$colors-greenHi: #00C868D9;
-$colors-pink: #DD55FF;
-$colors-pinkLo: #DD55FF33;
-$colors-pinkMd: #DD55FFB3;
-$colors-pinkHi: #DD55FFD9;
-$colors-purple: #956FFF;
-$colors-purpleLo: #956FFF33;
-$colors-purpleMd: #956FFFB3;
-$colors-purpleHi: #956FFFD9;
-$colors-red: #FF3B3B;
-$colors-redHi: #FF3B3BD9;
-$colors-redLo: #FF3B3B33;
-$colors-redMd: #FF3B3BB3;
-$colors-rose: #D1A2AB;
-$colors-roseHi: #D1A2ABD9;
-$colors-roseLo: #D1A2AB33;
-$colors-roseMd: #D1A2ABB3;
-$colors-sky: #9ECBFF;
-$colors-skyHi: rgba(106, 161, 224, 0.5);
-$colors-skyLo: #6AA1E0;
-$colors-skyMd: #9ECBFFB3;
-$colors-yellow: #FFCC19;
-$colors-yellowHi: #FFCC19D9;
-$colors-yellowLo: #FFCC1933;
-$colors-yellowMd: #FFCC19;
-$colors-white: #FFFFFF;
-$colors-whiteFixed: #FFFFFF;
-$colors-whiteLo: #FFFFFF80;
-$colors-whiteMd: #FFFFFF99;
-$colors-whiteHi: #FFFFFF1A;
-$colors-statuses-success: #8ADE00;
-$colors-statuses-successHi: rgba(138, 222, 0, 0.3);
 
 // themes/gradients.ts
 $blue: radial-gradient(
