--- a/mage_ai/frontend/styles/scss/modes/_dark.scss
+++ b/mage_ai/frontend/styles/scss/modes/_dark.scss
@@ -66,6 +66,7 @@
   --fonts-color-text-blue: #{colors.$fonts-color-text-blue};
   --fonts-color-text-inverted: #{colors.$fonts-color-text-inverted};
   --fonts-color-text-muted: #{colors.$fonts-color-text-muted};
+  --fonts-color-text-warning: #{colors.$fonts-color-text-warning};
   --fonts-family-base-black: #{colors.$fonts-family-base-black};
   --fonts-family-base-bold: #{colors.$fonts-family-base-bold};
   --fonts-family-base-lightFont: #{colors.$fonts-family-base-lightFont};
