--- a/mage_ai/frontend/styles/scss/components/Grid/Grid.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Grid/Grid.module.scss
@@ -2,6 +2,7 @@
 
 $numbers: 1, 2, 3, 4;
 $numbers-more: 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20;
+$keyword-values: min-content, max-content, auto, fit-content, minmax, inherit, initial, unset, revert, revert-layer;
 
 @mixin display(
 $values: (
@@ -22,6 +23,17 @@ $values: (
   @each $value in $values {
     &.auto-flow-#{$value} {
       grid-auto-flow: $value;
+    }
+  }
+}
+
+@mixin auto-columns-rows() {
+  @each $value in $keyword-values {
+    &.auto-columns-#{$value} {
+      grid-auto-columns: $value;
+    }
+    &.auto-rows-#{$value} {
+      grid-auto-rows: $value;
     }
   }
 }
@@ -146,6 +158,9 @@ $values: (
     &.template-rows-#{$value1}fr-auto {
       grid-template-rows: #{$value1}fr auto;
     }
+    &.template-rows-auto-#{$value1}fr-auto {
+      grid-template-rows: auto #{$value1}fr auto;
+    }
 
     &.template-columns-#{$value1}fr {
       grid-template-columns: #{$value1}fr;
@@ -158,6 +173,9 @@ $values: (
     }
     &.template-columns-auto-auto-#{$value1}fr {
       grid-template-columns: auto auto #{$value1}fr;
+    }
+    &.template-columns-auto-#{$value1}fr-auto {
+      grid-template-columns: auto #{$value1}fr auto;
     }
 
     @each $value2 in $numbers {
@@ -246,6 +264,7 @@ $values: (
   min-width: 0;
 
   @include auto-flow;
+  @include auto-columns-rows;
   @include content-items;
   @include display;
   @include layout;
