--- a/mage_ai/frontend/styles/scss/components/Text/Text.module.scss
+++ b/mage_ai/frontend/styles/scss/components/Text/Text.module.scss
@@ -11,3 +11,15 @@
 .xsmall {
   @include text.base-xs;
 }
+
+.monospace {
+  @include text.monospace;
+
+  &.small {
+    @include text.monospace-sm;
+  }
+
+  &.xsmall {
+    @include text.monospace-sm;
+  }
+}
