--- a/mage_ai/frontend/styles/scss/layout/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/layout/Canvas/Pipelines/Builder.module.scss
@@ -1,6 +1,41 @@
+$grid-size: 100px;
+
 .canvas {
   background-color: var(--backgrounds-button-base-hover);
   height: 100%;
   position: relative;
   width: 100%;
+
+  &:before,
+  &:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+  }
+
+  &:before {
+    background:
+      repeating-linear-gradient(
+        to right,
+        transparent,
+        transparent calc($grid-size - 1px),
+        rgba(0, 0, 0, 0.1) calc($grid-size - 1px),
+        rgba(0, 0, 0, 0.1) $grid-size
+      );
+  }
+
+  &:after {
+    background:
+      repeating-linear-gradient(
+        to bottom,
+        transparent,
+        transparent calc($grid-size - 1px),
+        rgba(0, 0, 0, 0.1) calc($grid-size - 1px),
+        rgba(0, 0, 0, 0.1) $grid-size
+      );
+  }
 }
