--- a/mage_ai/frontend/styles/scss/layout/Canvas/Pipelines/Builder.module.scss
+++ b/mage_ai/frontend/styles/scss/layout/Canvas/Pipelines/Builder.module.scss
@@ -2,9 +2,13 @@ $grid-size: 100px;
 
 .canvas {
   background-color: var(--backgrounds-button-base-hover);
-  height: 100%;
-  position: relative;
-  width: 100%;
+  height: 200%; /* Large enough to initially fit all content, will expand as needed */
+  width: 200%;  /* Large enough to initially fit all content, will expand as needed */
+  position: absolute; /* Ensure it behaves correctly inside the parent container */
+  top: 0;
+  left: 0;
+  overflow: visible; /* Ensure content can overflow without clipping */
+  transform-origin: top left;
 
   &:before,
   &:after {
@@ -18,23 +22,23 @@ $grid-size: 100px;
   }
 
   &:before {
-    background:
+    background-image:
       repeating-linear-gradient(
         to right,
         transparent,
-        transparent calc($grid-size - 1px),
-        rgba(0, 0, 0, 0.1) calc($grid-size - 1px),
+        transparent calc(#{$grid-size} - 1px),
+        rgba(0, 0, 0, 0.1) calc(#{$grid-size} - 1px),
         rgba(0, 0, 0, 0.1) $grid-size
       );
   }
 
   &:after {
-    background:
+    background-image:
       repeating-linear-gradient(
         to bottom,
         transparent,
-        transparent calc($grid-size - 1px),
-        rgba(0, 0, 0, 0.1) calc($grid-size - 1px),
+        transparent calc(#{$grid-size} - 1px),
+        rgba(0, 0, 0, 0.1) calc(#{$grid-size} - 1px),
         rgba(0, 0, 0, 0.1) $grid-size
       );
   }
