--- a/mage_ai/frontend/styles/scss/abstracts/_variables.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/_variables.scss
@@ -1,49 +1,131 @@
-@import '../abstracts/colors';
-
-// borders.ts
+$borders-outline-offset: 1;
+$borders-outline-width: 2;
 $borders-radius-base: 10px;
+$borders-radius-round: 40px;
+$borders-radius-sm: 6px;
 $borders-style: solid;
 $borders-width: 1px;
-
-// interactive.ts
+$buttons-grid-column-gap-base: 8;
+$buttons-grid-column-gap-sm: 6;
+$buttons-padding-base: 13px 14px;
+$buttons-padding-sm: 12px 13px;
+$buttons-padding-xs: 6px 8px;
+$fonts-family-base-black: Inter Black, sans-serif;
+$fonts-family-base-bold: Inter Bold, sans-serif;
+$fonts-family-base-lightfont: Inter Light, sans-serif;
+$fonts-family-base-medium: Inter Medium, sans-serif;
+$fonts-family-base-regular: Inter Regular, sans-serif;
+$fonts-family-base-semibold: Inter SemiBold, sans-serif;
+$fonts-family-monospace-black: Fira Code Bold, monospace;
+$fonts-family-monospace-bold: Fira Code Bold, monospace;
+$fonts-family-monospace-bolditalic: Fira Code Bold Italic, monospace;
+$fonts-family-monospace-lightfont: Fira Code Light, monospace;
+$fonts-family-monospace-medium: Fira Code Medium, monospace;
+$fonts-family-monospace-regular: Fira Code Retina, Fira Code Regular, monospace;
+$fonts-family-monospace-regularitalic: Fira Code Regular Italic, monospace;
+$fonts-family-monospace-semibold: Fira Code SemiBold, monospace;
+$fonts-lineheight-base: normal;
+$fonts-lineheight-md: 144%;
+$fonts-lineheight-monospace: 160%;
+$fonts-lineheight-sm: 20px;
+$fonts-lineheight-xs: 125%;
+$fonts-size-base: 16px;
+$fonts-size-sm: 14px;
+$fonts-size-xs: 12px;
+$fonts-style-base: normal;
+$fonts-style-italic: italic;
+$fonts-weight-bold: 700;
+$fonts-weight-light: 300;
+$fonts-weight-medium: 500;
+$fonts-weight-regular: 400;
+$fonts-weight-semibold: 600;
+$fonts-weight: 300;
+$grid-gutter-width-base: 12;
+$grid-gutter-width-sm: 8;
+$grid-gutter-width-xs: 4;
+$icons-size-base: 20;
+$icons-size-sm: 17;
+$icons-size-xs: 12;
+$inputs-border-radius-base: 10px;
+$inputs-border-style-base: solid;
+$inputs-border-width-base: 1px;
+$inputs-padding-base: 13px 16px;
+$inputs-padding-sm: 8px 16px;
+$margin-base: 12;
+$margin-sm: 8;
+$margin-xs: 4;
+$menus-border-radius-base: 6px;
+$menus-padding-base: 8px 8px;
+$padding-base: 12;
+$padding-sm: 8;
 $padding-vertical-base: $buttons-padding-base;
 $padding-vertical-sm: $buttons-padding-sm;
 $padding-vertical-xs: $buttons-padding-xs;
-
-$padding-vertical: (
-  base: $padding-vertical-base,
-  sm: $padding-vertical-sm,
-  xs: $padding-vertical-xs
-);
-
-
-// padding.ts
-$padding-base: $padding-base;
-$padding-sm: $padding-sm;
-$padding-xs: $padding-xs;
-
-$padding: (
-  base: $padding-base,
-  sm: $padding-sm,
-  xs: $padding-xs
-);
-
-// sizes.ts
-$size-sm: sm;
-$size-md: md;
+$padding-vertical: (base: $padding-vertical-base, sm: $padding-vertical-sm, xs: $padding-vertical-xs);
+$padding-xs: 4;
+$padding: (base: $padding-base, sm: $padding-sm, xs: $padding-xs);
+$scrollbars-border-radius-thumb: 40px;
+$scrollbars-border-radius-track: 10px;
+$scrollbars-width-thumb: 4;
+$scrollbars-width-track: 6;
 $size-lg: lg;
+$size-md: md;
+$size-sm: sm;
 $size-xl: xl;
 $size-xxl: xxl;
 $size-xxxl: xxxl;
-
-$size: (
-  sm: $size-sm,
-  md: $size-md,
-  lg: $size-lg,
-  xl: $size-xl,
-  xxl: $size-xxl,
-  xxxl: $size-xxxl
-);
-
-// spaces.ts
+$size: (sm: $size-sm, md: $size-md, lg: $size-lg, xl: $size-xl, xxl: $size-xxl, xxxl: $size-xxxl);
 $unit: $margin-xs;
+
+$fonts: (
+  color: (
+    button-base: var(--fonts-color-button-base),
+    text-base: var(--fonts-color-text-base),
+    text-blue: var(--fonts-color-text-blue),
+    text-inverted: var(--fonts-color-text-inverted),
+    text-muted: var(--fonts-color-text-muted),
+  ),
+  family: (
+    base: (
+      black: var(--fonts-family-base-black),
+      bold: var(--fonts-family-base-bold),
+      lightfont: var(--fonts-family-base-lightfont),
+      medium: var(--fonts-family-base-medium),
+      regular: var(--fonts-family-base-regular),
+      semibold: var(--fonts-family-base-semibold),
+    ),
+    monospace: (
+      black: var(--fonts-family-monospace-black),
+      bold: var(--fonts-family-monospace-bold),
+      bolditalic: var(--fonts-family-monospace-bolditalic),
+      lightfont: var(--fonts-family-monospace-lightfont),
+      medium: var(--fonts-family-monospace-medium),
+      regular: var(--fonts-family-monospace-regular),
+      regularitalic: var(--fonts-family-monospace-regularitalic),
+      semibold: var(--fonts-family-monospace-semibold),
+    )
+  ),
+  lineheight: (
+    base: var(--fonts-lineheight-base),
+    md: var(--fonts-lineheight-md),
+    monospace: var(--fonts-lineheight-monospace),
+    sm: var(--fonts-lineheight-sm),
+    xs: var(--fonts-lineheight-xs),
+  ),
+  size: (
+    base: var(--fonts-size-base),
+    sm: var(--fonts-size-sm),
+    xs: var(--fonts-size-xs),
+  ),
+  style: (
+    base: var(--fonts-style-base),
+    italic: var(--fonts-style-italic),
+  ),
+  weight: (
+    bold: var(--fonts-weight-bold),
+    light: var(--fonts-weight-light),
+    medium: var(--fonts-weight-medium),
+    regular: var(--fonts-weight-regular),
+    semibold: var(--fonts-weight-semibold),
+  ),
+);
