--- a/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
+++ b/mage_ai/frontend/styles/scss/abstracts/colors/_light.scss
@@ -56,6 +56,59 @@ $colors-whitefixed: #FFFFFF;
 $colors-whitelo: #1B006699;
 $colors-whitemd: #1B006699;
 $colors-whitehi: #1B00661A;
+/* ----------------------------------------------------------------------------------------------- */
+$backgrounds-blur: rgba(255, 255, 255, 0.7);
+$backgrounds-body: #FFFFFF;
+$backgrounds-button-base-default: #EBECF4;
+$backgrounds-button-base-hover: #1B00661A;
+$backgrounds-button-basic-default: transparent;
+$backgrounds-button-basic-hover: #1B00661A;
+$backgrounds-button-primary-default: #956FFF;
+$backgrounds-button-primary-hover: #956FFFD9;
+$backgrounds-button-secondary-default: #00C868;
+$backgrounds-button-secondary-hover: #00C868D9;
+$backgrounds-input-base-active: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
+$backgrounds-input-base-default: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
+$backgrounds-input-base-focus: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
+$backgrounds-input-base-hover: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
+$backgrounds-menu-base-default: #BBAFDAB3;
+$backgrounds-menu-contained-default: #BBAFDA;
+$backgrounds-scrollbar-thumb-default: #BBAFDA;
+$backgrounds-scrollbar-thumb-hover: #1B006699;
+$backgrounds-scrollbar-track-default: #BBAFDA1A;
+$backgrounds-scrollbar-track-hover: #BBAFDAB3;
+$borders-color-base-default: #BBAFDA;
+$borders-color-base-hover: #BBAFDAD9;
+$borders-color-button-base-default: gray;
+$borders-color-button-base-hover: #BBAFDA;
+$borders-color-button-basic-default: gray;
+$borders-color-button-basic-hover: #BBAFDA;
+$borders-color-button-primary-default: #BBAFDA;
+$borders-color-button-primary-hover: #BBAFDA;
+$borders-color-button-secondary-default: #BBAFDA;
+$borders-color-button-secondary-hover: #BBAFDA;
+$borders-color-input-base-active: #1F6BFF;
+$borders-color-input-base-default: #0500FF;
+$borders-color-input-base-focus: #1F6BFF;
+$borders-color-input-base-hover: #1F6BFF;
+$borders-color-muted-default: grayLo;
+$borders-color-muted-hover: #BBAFDA1A;
+$buttons-border-color-base-default: gray;
+$buttons-border-color-base-hover: #BBAFDA;
+$buttons-border-color-basic-default: gray;
+$buttons-border-color-basic-hover: #BBAFDA;
+$buttons-border-color-primary-default: #BBAFDA;
+$buttons-border-color-primary-hover: #BBAFDA;
+$buttons-border-color-secondary-default: #BBAFDA;
+$buttons-border-color-secondary-hover: #BBAFDA;
+$buttons-outline-color-base-default: gray;
+$buttons-outline-color-base-hover: #BBAFDA;
+$buttons-outline-color-basic-default: blackLo;
+$buttons-outline-color-basic-hover: #00000033;
+$buttons-outline-color-primary-default: #956FFF;
+$buttons-outline-color-primary-hover: #956FFF;
+$buttons-outline-color-secondary-default: #00C868;
+$buttons-outline-color-secondary-hover: #00C868;
 $colors-backgrounds-blur: rgba(255, 255, 255, 0.7);
 $colors-backgrounds-body: #FFFFFF;
 $colors-backgrounds-button-base-default: #EBECF4;
@@ -110,110 +163,14 @@ $colors-typography-text-base: #000000;
 $colors-typography-text-blue: #1F6BFF;
 $colors-typography-text-inverted: #FFFFFF;
 $colors-typography-text-muted: #00000099;
-
-$backgrounds-blur: rgba(255, 255, 255, 0.7);
-$backgrounds-body: #FFFFFF;
-$backgrounds-button-base-default: #EBECF4;
-$backgrounds-button-base-hover: #1B00661A;
-$backgrounds-button-basic-default: transparent;
-$backgrounds-button-basic-hover: #1B00661A;
-$backgrounds-button-primary-default: #956FFF;
-$backgrounds-button-primary-hover: #956FFFD9;
-$backgrounds-button-secondary-default: #00C868;
-$backgrounds-button-secondary-hover: #00C868D9;
-$backgrounds-input-base-active: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
-$backgrounds-input-base-default: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
-$backgrounds-input-base-focus: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
-$backgrounds-input-base-hover: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
-$backgrounds-menu-base-default: #BBAFDAB3;
-$backgrounds-menu-contained-default: #BBAFDA;
-$backgrounds-scrollbar-thumb-default: #BBAFDA;
-$backgrounds-scrollbar-thumb-hover: #1B006699;
-$backgrounds-scrollbar-track-default: #BBAFDA1A;
-$backgrounds-scrollbar-track-hover: #BBAFDAB3;
-$borders-color-base-default: #BBAFDA;
-$borders-color-base-hover: #BBAFDAD9;
-$borders-color-button-base-default: gray;
-$borders-color-button-base-hover: #BBAFDA;
-$borders-color-button-basic-default: gray;
-$borders-color-button-basic-hover: #BBAFDA;
-$borders-color-button-primary-default: #BBAFDA;
-$borders-color-button-primary-hover: #BBAFDA;
-$borders-color-button-secondary-default: #BBAFDA;
-$borders-color-button-secondary-hover: #BBAFDA;
-$borders-color-input-base-active: #1F6BFF;
-$borders-color-input-base-default: #0500FF;
-$borders-color-input-base-focus: #1F6BFF;
-$borders-color-input-base-hover: #1F6BFF;
-$borders-color-muted-default: grayLo;
-$borders-color-muted-hover: #BBAFDA1A;
-$borders-outline-offset: 1;
-$borders-outline-width: 2;
-$borders-radius-base: 10px;
-$borders-radius-round: 40px;
-$borders-radius-sm: 6px;
-$borders-style: solid;
-$borders-width: 1px;
-$buttons-border-color-base-default: gray;
-$buttons-border-color-base-hover: #BBAFDA;
-$buttons-border-color-basic-default: gray;
-$buttons-border-color-basic-hover: #BBAFDA;
-$buttons-border-color-primary-default: #BBAFDA;
-$buttons-border-color-primary-hover: #BBAFDA;
-$buttons-border-color-secondary-default: #BBAFDA;
-$buttons-border-color-secondary-hover: #BBAFDA;
-$buttons-grid-column-gap-base: 8;
-$buttons-grid-column-gap-sm: 6;
-$buttons-outline-color-base-default: gray;
-$buttons-outline-color-base-hover: #BBAFDA;
-$buttons-outline-color-basic-default: blackLo;
-$buttons-outline-color-basic-hover: #00000033;
-$buttons-outline-color-primary-default: #956FFF;
-$buttons-outline-color-primary-hover: #956FFF;
-$buttons-outline-color-secondary-default: #00C868;
-$buttons-outline-color-secondary-hover: #00C868;
-$buttons-padding-base: 13px 14px;
-$buttons-padding-sm: 12px 13px;
-$buttons-padding-xs: 6px 8px;
 $fonts-color-button-base: #130048;
 $fonts-color-text-base: #000000;
 $fonts-color-text-blue: #1F6BFF;
 $fonts-color-text-inverted: #FFFFFF;
 $fonts-color-text-muted: #00000099;
 $fonts-color-text-warning: $colors-yellow;
-$fonts-family-base-black: Inter Black, sans-serif;
-$fonts-family-base-bold: Inter Bold, sans-serif;
-$fonts-family-base-lightfont: Inter Light, sans-serif;
-$fonts-family-base-medium: Inter Medium, sans-serif;
-$fonts-family-base-regular: Inter Regular, sans-serif;
-$fonts-family-base-semibold: Inter SemiBold, sans-serif;
-$fonts-family-monospace-black: Fira Code Bold, monospace;
-$fonts-family-monospace-bold: Fira Code Bold, monospace;
-$fonts-family-monospace-bolditalic: Fira Code Bold Italic, monospace;
-$fonts-family-monospace-lightfont: Fira Code Light, monospace;
-$fonts-family-monospace-medium: Fira Code Medium, monospace;
-$fonts-family-monospace-regular: Fira Code Retina, Fira Code Regular, monospace;
-$fonts-family-monospace-regularitalic: Fira Code Regular Italic, monospace;
-$fonts-family-monospace-semibold: Fira Code SemiBold, monospace;
-$fonts-lineheight-base: 125%;
-$fonts-lineheight-md: 144%;
-$fonts-lineheight-monospace: 160%;
-$fonts-lineheight-sm: 20px;
-$fonts-lineheight-xs: 125%;
-$fonts-size-base: 16px;
-$fonts-size-sm: 14px;
-$fonts-size-xs: 12px;
-$fonts-style-base: normal;
-$fonts-style-italic: italic;
-$fonts-weight: 300;
-$grid-gutter-width-base: 12;
-$grid-gutter-width-sm: 8;
-$grid-gutter-width-xs: 4;
 $icons-color-base: #000000;
 $icons-color-inverted: #FFFFFF;
-$icons-size-base: 20;
-$icons-size-sm: 17;
-$icons-size-xs: 12;
 $inputs-background-base-active: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
 $inputs-background-base-default: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
 $inputs-background-base-focus: radial-gradient(155.7% 118.3% at 22.25% 145.77%, rgba(42, 76, 255, 0.08) 0%, rgba(42, 76, 255, 0.00) 100%), rgba(42, 76, 255, 0.10);
@@ -222,76 +179,11 @@ $inputs-border-color-base-active: #1F6BFF;
 $inputs-border-color-base-default: #0500FF;
 $inputs-border-color-base-focus: #1F6BFF;
 $inputs-border-color-base-hover: #1F6BFF;
-$inputs-border-radius-base: 10px;
-$inputs-border-style-base: solid;
-$inputs-border-width-base: 1px;
-$inputs-padding-base: 13px 16px;
-$inputs-padding-sm: 8px 16px;
 $inputs-placeholder-color: #00000033;
-$margin-base: 12;
-$margin-sm: 8;
-$margin-xs: 4;
 $menus-background-base-default: #BBAFDAB3;
 $menus-background-contained-default: #BBAFDA;
 $menus-blur-base: saturate(100%) blur(3px);
-$menus-border-radius-base: 6px;
-$menus-padding-base: 8px 8px;
-$padding-base: 12;
-$padding-sm: 8;
-$padding-xs: 4;
 $scrollbars-background-thumb-default: #BBAFDA;
 $scrollbars-background-thumb-hover: #1B006699;
 $scrollbars-background-track-default: #BBAFDA1A;
 $scrollbars-background-track-hover: #BBAFDAB3;
-$scrollbars-border-radius-thumb: 40px;
-$scrollbars-border-radius-track: 10px;
-$scrollbars-width-thumb: 4;
-$scrollbars-width-track: 6;
-
-// borders.ts
-$borders-radius-base: 10px;
-$borders-style: solid;
-$borders-width: 1px;
-
-// interactive.ts
-$padding-vertical-base: $buttons-padding-base;
-$padding-vertical-sm: $buttons-padding-sm;
-$padding-vertical-xs: $buttons-padding-xs;
-
-$padding-vertical: (
-  base: $padding-vertical-base,
-  sm: $padding-vertical-sm,
-  xs: $padding-vertical-xs
-);
-
-
-// padding.ts
-$padding-base: $padding-base;
-$padding-sm: $padding-sm;
-$padding-xs: $padding-xs;
-
-$padding: (
-  base: $padding-base,
-  sm: $padding-sm,
-  xs: $padding-xs
-);
-
-// sizes.ts
-$size-sm: sm;
-$size-md: md;
-$size-lg: lg;
-$size-xl: xl;
-$size-xxl: xxl;
-$size-xxxl: xxxl;
-
-$size: (
-  sm: $size-sm,
-  md: $size-md,
-  lg: $size-lg,
-  xl: $size-xl,
-  xxl: $size-xxl,
-  xxxl: $size-xxxl
-);
-
-// spaces.ts
-$unit: $margin-xs;
