--- a/mage_ai/frontend/styles/scss/modes/_dark.scss
+++ b/mage_ai/frontend/styles/scss/modes/_dark.scss
@@ -1,6 +1,66 @@
-@use '../abstracts/colors-dark' as colors;
+@use '../abstracts/colors/dark' as colors;
 
 @mixin dark-mode() {
+  --colors-black: #{colors.$colors-black};
+  --colors-blackfixed: #{colors.$colors-blackfixed};
+  --colors-blacklo: #{colors.$colors-blacklo};
+  --colors-blackmd: #{colors.$colors-blackmd};
+  --colors-blackhi: #{colors.$colors-blackhi};
+  --colors-blue: #{colors.$colors-blue};
+  --colors-bluehi: #{colors.$colors-bluehi};
+  --colors-bluelo: #{colors.$colors-bluelo};
+  --colors-bluemd: #{colors.$colors-bluemd};
+  --colors-bluemuted: #{colors.$colors-bluemuted};
+  --colors-bluetext: #{colors.$colors-bluetext};
+  --colors-teal: #{colors.$colors-teal};
+  --colors-tealhi: #{colors.$colors-tealhi};
+  --colors-teallo: #{colors.$colors-teallo};
+  --colors-tealmd: #{colors.$colors-tealmd};
+  --colors-dbt: #{colors.$colors-dbt};
+  --colors-dbthi: #{colors.$colors-dbthi};
+  --colors-dbtlo: #{colors.$colors-dbtlo};
+  --colors-dbtmd: #{colors.$colors-dbtmd};
+  --colors-glow: #{colors.$colors-glow};
+  --colors-glow2: #{colors.$colors-glow2};
+  --colors-gray: #{colors.$colors-gray};
+  --colors-graylo: #{colors.$colors-graylo};
+  --colors-graymd: #{colors.$colors-graymd};
+  --colors-grayhi: #{colors.$colors-grayhi};
+  --colors-green: #{colors.$colors-green};
+  --colors-greenlo: #{colors.$colors-greenlo};
+  --colors-greenmd: #{colors.$colors-greenmd};
+  --colors-greenhi: #{colors.$colors-greenhi};
+  --colors-pink: #{colors.$colors-pink};
+  --colors-pinklo: #{colors.$colors-pinklo};
+  --colors-pinkmd: #{colors.$colors-pinkmd};
+  --colors-pinkhi: #{colors.$colors-pinkhi};
+  --colors-purple: #{colors.$colors-purple};
+  --colors-purplelo: #{colors.$colors-purplelo};
+  --colors-purplemd: #{colors.$colors-purplemd};
+  --colors-purplehi: #{colors.$colors-purplehi};
+  --colors-red: #{colors.$colors-red};
+  --colors-redhi: #{colors.$colors-redhi};
+  --colors-redlo: #{colors.$colors-redlo};
+  --colors-redmd: #{colors.$colors-redmd};
+  --colors-rose: #{colors.$colors-rose};
+  --colors-rosehi: #{colors.$colors-rosehi};
+  --colors-roselo: #{colors.$colors-roselo};
+  --colors-rosemd: #{colors.$colors-rosemd};
+  --colors-sky: #{colors.$colors-sky};
+  --colors-skyhi: #{colors.$colors-skyhi};
+  --colors-skylo: #{colors.$colors-skylo};
+  --colors-skymd: #{colors.$colors-skymd};
+  --colors-yellow: #{colors.$colors-yellow};
+  --colors-yellowhi: #{colors.$colors-yellowhi};
+  --colors-yellowlo: #{colors.$colors-yellowlo};
+  --colors-yellowmd: #{colors.$colors-yellowmd};
+  --colors-white: #{colors.$colors-white};
+  --colors-whitefixed: #{colors.$colors-whitefixed};
+  --colors-whitelo: #{colors.$colors-whitelo};
+  --colors-whitemd: #{colors.$colors-whitemd};
+  --colors-whitehi: #{colors.$colors-whitehi};
+  --colors-statuses-success: #{colors.$colors-statuses-success};
+  --colors-statuses-successhi: #{colors.$colors-statuses-successhi};
   --backgrounds-body: #{colors.$backgrounds-body};
   --backgrounds-button-base-default: #{colors.$backgrounds-button-base-default};
   --backgrounds-button-base-hover: #{colors.$backgrounds-button-base-hover};
@@ -36,10 +96,64 @@
   --borders-color-input-base-hover: #{colors.$borders-color-input-base-hover};
   --borders-color-muted-default: #{colors.$borders-color-muted-default};
   --borders-color-muted-hover: #{colors.$borders-color-muted-hover};
-  --borders-outline-offset: #{colors.$borders-outline-offset};
-  --borders-outline-width: #{colors.$borders-outline-width};
-  --borders-radius-round: #{colors.$borders-radius-round};
-  --borders-radius-sm: #{colors.$borders-radius-sm};
+  --borders-color-black: #{colors.$borders-color-black};
+  --borders-color-blackfixed: #{colors.$borders-color-blackfixed};
+  --borders-color-blacklo: #{colors.$borders-color-blacklo};
+  --borders-color-blackmd: #{colors.$borders-color-blackmd};
+  --borders-color-blackhi: #{colors.$borders-color-blackhi};
+  --borders-color-blue: #{colors.$borders-color-blue};
+  --borders-color-bluehi: #{colors.$borders-color-bluehi};
+  --borders-color-bluelo: #{colors.$borders-color-bluelo};
+  --borders-color-bluemd: #{colors.$borders-color-bluemd};
+  --borders-color-bluemuted: #{colors.$borders-color-bluemuted};
+  --borders-color-bluetext: #{colors.$borders-color-bluetext};
+  --borders-color-teal: #{colors.$borders-color-teal};
+  --borders-color-tealhi: #{colors.$borders-color-tealhi};
+  --borders-color-teallo: #{colors.$borders-color-teallo};
+  --borders-color-tealmd: #{colors.$borders-color-tealmd};
+  --borders-color-dbt: #{colors.$borders-color-dbt};
+  --borders-color-dbthi: #{colors.$borders-color-dbthi};
+  --borders-color-dbtlo: #{colors.$borders-color-dbtlo};
+  --borders-color-dbtmd: #{colors.$borders-color-dbtmd};
+  --borders-color-glow: #{colors.$borders-color-glow};
+  --borders-color-glow2: #{colors.$borders-color-glow2};
+  --borders-color-gray: #{colors.$borders-color-gray};
+  --borders-color-graylo: #{colors.$borders-color-graylo};
+  --borders-color-graymd: #{colors.$borders-color-graymd};
+  --borders-color-grayhi: #{colors.$borders-color-grayhi};
+  --borders-color-green: #{colors.$borders-color-green};
+  --borders-color-greenlo: #{colors.$borders-color-greenlo};
+  --borders-color-greenmd: #{colors.$borders-color-greenmd};
+  --borders-color-greenhi: #{colors.$borders-color-greenhi};
+  --borders-color-pink: #{colors.$borders-color-pink};
+  --borders-color-pinklo: #{colors.$borders-color-pinklo};
+  --borders-color-pinkmd: #{colors.$borders-color-pinkmd};
+  --borders-color-pinkhi: #{colors.$borders-color-pinkhi};
+  --borders-color-purple: #{colors.$borders-color-purple};
+  --borders-color-purplelo: #{colors.$borders-color-purplelo};
+  --borders-color-purplemd: #{colors.$borders-color-purplemd};
+  --borders-color-purplehi: #{colors.$borders-color-purplehi};
+  --borders-color-red: #{colors.$borders-color-red};
+  --borders-color-redhi: #{colors.$borders-color-redhi};
+  --borders-color-redlo: #{colors.$borders-color-redlo};
+  --borders-color-redmd: #{colors.$borders-color-redmd};
+  --borders-color-rose: #{colors.$borders-color-rose};
+  --borders-color-rosehi: #{colors.$borders-color-rosehi};
+  --borders-color-roselo: #{colors.$borders-color-roselo};
+  --borders-color-rosemd: #{colors.$borders-color-rosemd};
+  --borders-color-sky: #{colors.$borders-color-sky};
+  --borders-color-skyhi: #{colors.$borders-color-skyhi};
+  --borders-color-skylo: #{colors.$borders-color-skylo};
+  --borders-color-skymd: #{colors.$borders-color-skymd};
+  --borders-color-yellow: #{colors.$borders-color-yellow};
+  --borders-color-yellowhi: #{colors.$borders-color-yellowhi};
+  --borders-color-yellowlo: #{colors.$borders-color-yellowlo};
+  --borders-color-yellowmd: #{colors.$borders-color-yellowmd};
+  --borders-color-white: #{colors.$borders-color-white};
+  --borders-color-whitefixed: #{colors.$borders-color-whitefixed};
+  --borders-color-whitelo: #{colors.$borders-color-whitelo};
+  --borders-color-whitemd: #{colors.$borders-color-whitemd};
+  --borders-color-whitehi: #{colors.$borders-color-whitehi};
   --buttons-border-color-base-default: #{colors.$buttons-border-color-base-default};
   --buttons-border-color-base-hover: #{colors.$buttons-border-color-base-hover};
   --buttons-border-color-basic-default: #{colors.$buttons-border-color-basic-default};
@@ -48,8 +162,6 @@
   --buttons-border-color-primary-hover: #{colors.$buttons-border-color-primary-hover};
   --buttons-border-color-secondary-default: #{colors.$buttons-border-color-secondary-default};
   --buttons-border-color-secondary-hover: #{colors.$buttons-border-color-secondary-hover};
-  --buttons-grid-column-gap-base: #{colors.$buttons-grid-column-gap-base};
-  --buttons-grid-column-gap-sm: #{colors.$buttons-grid-column-gap-sm};
   --buttons-outline-color-base-default: #{colors.$buttons-outline-color-base-default};
   --buttons-outline-color-base-hover: #{colors.$buttons-outline-color-base-hover};
   --buttons-outline-color-basic-default: #{colors.$buttons-outline-color-basic-default};
@@ -58,52 +170,14 @@
   --buttons-outline-color-primary-hover: #{colors.$buttons-outline-color-primary-hover};
   --buttons-outline-color-secondary-default: #{colors.$buttons-outline-color-secondary-default};
   --buttons-outline-color-secondary-hover: #{colors.$buttons-outline-color-secondary-hover};
-  --buttons-padding-base: #{colors.$buttons-padding-base};
-  --buttons-padding-sm: #{colors.$buttons-padding-sm};
-  --buttons-padding-xs: #{colors.$buttons-padding-xs};
   --fonts-color-button-base: #{colors.$fonts-color-button-base};
   --fonts-color-text-base: #{colors.$fonts-color-text-base};
   --fonts-color-text-blue: #{colors.$fonts-color-text-blue};
   --fonts-color-text-inverted: #{colors.$fonts-color-text-inverted};
   --fonts-color-text-muted: #{colors.$fonts-color-text-muted};
   --fonts-color-text-warning: #{colors.$fonts-color-text-warning};
-  --fonts-family-base-black: #{colors.$fonts-family-base-black};
-  --fonts-family-base-bold: #{colors.$fonts-family-base-bold};
-  --fonts-family-base-lightFont: #{colors.$fonts-family-base-lightFont};
-  --fonts-family-base-medium: #{colors.$fonts-family-base-medium};
-  --fonts-family-base-regular: #{colors.$fonts-family-base-regular};
-  --fonts-family-base-semiBold: #{colors.$fonts-family-base-semiBold};
-  --fonts-family-monospace-black: #{colors.$fonts-family-monospace-black};
-  --fonts-family-monospace-bold: #{colors.$fonts-family-monospace-bold};
-  --fonts-family-monospace-boldItalic: #{colors.$fonts-family-monospace-boldItalic};
-  --fonts-family-monospace-lightFont: #{colors.$fonts-family-monospace-lightFont};
-  --fonts-family-monospace-medium: #{colors.$fonts-family-monospace-medium};
-  --fonts-family-monospace-regular: #{colors.$fonts-family-monospace-regular};
-  --fonts-family-monospace-regularItalic: #{colors.$fonts-family-monospace-regularItalic};
-  --fonts-family-monospace-semiBold: #{colors.$fonts-family-monospace-semiBold};
-  --fonts-lineHeight-base: #{colors.$fonts-lineHeight-base};
-  --fonts-lineHeight-md: #{colors.$fonts-lineHeight-md};
-  --fonts-lineHeight-monospace: #{colors.$fonts-lineHeight-monospace};
-  --fonts-lineHeight-sm: #{colors.$fonts-lineHeight-sm};
-  --fonts-lineHeight-xs: #{colors.$fonts-lineHeight-xs};
-  --fonts-size-base: #{colors.$fonts-size-base};
-  --fonts-size-sm: #{colors.$fonts-size-sm};
-  --fonts-size-xs: #{colors.$fonts-size-xs};
-  --fonts-style-base: #{colors.$fonts-style-base};
-  --fonts-style-italic: #{colors.$fonts-style-italic};
-  --fonts-weight-bold: #{colors.$fonts-weight-bold};
-  --fonts-weight-light: #{colors.$fonts-weight-light};
-  --fonts-weight-medium: #{colors.$fonts-weight-medium};
-  --fonts-weight-regular: #{colors.$fonts-weight-regular};
-  --fonts-weight-semiBold: #{colors.$fonts-weight-semiBold};
-  --grid-gutter-width-base: #{colors.$grid-gutter-width-base};
-  --grid-gutter-width-sm: #{colors.$grid-gutter-width-sm};
-  --grid-gutter-width-xs: #{colors.$grid-gutter-width-xs};
   --icons-color-base: #{colors.$icons-color-base};
   --icons-color-inverted: #{colors.$icons-color-inverted};
-  --icons-size-base: #{colors.$icons-size-base};
-  --icons-size-sm: #{colors.$icons-size-sm};
-  --icons-size-xs: #{colors.$icons-size-xs};
   --inputs-background-base-active: #{colors.$inputs-background-base-active};
   --inputs-background-base-default: #{colors.$inputs-background-base-default};
   --inputs-background-base-focus: #{colors.$inputs-background-base-focus};
@@ -112,105 +186,13 @@
   --inputs-border-color-base-default: #{colors.$inputs-border-color-base-default};
   --inputs-border-color-base-focus: #{colors.$inputs-border-color-base-focus};
   --inputs-border-color-base-hover: #{colors.$inputs-border-color-base-hover};
-  --inputs-border-radius-base: #{colors.$inputs-border-radius-base};
-  --inputs-border-style-base: #{colors.$inputs-border-style-base};
-  --inputs-border-width-base: #{colors.$inputs-border-width-base};
-  --inputs-padding-base: #{colors.$inputs-padding-base};
-  --inputs-padding-sm: #{colors.$inputs-padding-sm};
   --inputs-placeholder-color: #{colors.$inputs-placeholder-color};
-  --margin-base: #{colors.$margin-base};
-  --margin-sm: #{colors.$margin-sm};
-  --margin-xs: #{colors.$margin-xs};
   --menus-background-base-default: #{colors.$menus-background-base-default};
   --menus-background-contained-default: #{colors.$menus-background-contained-default};
   --menus-blur-base: #{colors.$menus-blur-base};
-  --menus-border-radius-base: #{colors.$menus-border-radius-base};
-  --menus-padding-base: #{colors.$menus-padding-base};
-  --padding-base: #{colors.$padding-base};
-  --padding-sm: #{colors.$padding-sm};
-  --padding-xs: #{colors.$padding-xs};
   --scrollbars-background-thumb-default: #{colors.$scrollbars-background-thumb-default};
   --scrollbars-background-thumb-hover: #{colors.$scrollbars-background-thumb-hover};
   --scrollbars-background-track-default: #{colors.$scrollbars-background-track-default};
   --scrollbars-background-track-hover: #{colors.$scrollbars-background-track-hover};
-  --scrollbars-border-radius-thumb: #{colors.$scrollbars-border-radius-thumb};
-  --scrollbars-border-radius-track: #{colors.$scrollbars-border-radius-track};
-  --scrollbars-width-thumb: #{colors.$scrollbars-width-thumb};
-  --scrollbars-width-track: #{colors.$scrollbars-width-track};
-  --colors-black: #{colors.$colors-black};
-  --colors-blackFixed: #{colors.$colors-blackFixed};
-  --colors-blackLo: #{colors.$colors-blackLo};
-  --colors-blackMd: #{colors.$colors-blackMd};
-  --colors-blackHi: #{colors.$colors-blackHi};
-  --colors-blue: #{colors.$colors-blue};
-  --colors-blueHi: #{colors.$colors-blueHi};
-  --colors-blueLo: #{colors.$colors-blueLo};
-  --colors-blueMd: #{colors.$colors-blueMd};
-  --colors-blueMuted: #{colors.$colors-blueMuted};
-  --colors-blueText: #{colors.$colors-blueText};
-  --colors-teal: #{colors.$colors-teal};
-  --colors-tealHi: #{colors.$colors-tealHi};
-  --colors-tealLo: #{colors.$colors-tealLo};
-  --colors-tealMd: #{colors.$colors-tealMd};
-  --colors-dbt: #{colors.$colors-dbt};
-  --colors-dbtHi: #{colors.$colors-dbtHi};
-  --colors-dbtLo: #{colors.$colors-dbtLo};
-  --colors-dbtMd: #{colors.$colors-dbtMd};
-  --colors-glow: #{colors.$colors-glow};
-  --colors-glow2: #{colors.$colors-glow2};
-  --colors-gray: #{colors.$colors-gray};
-  --colors-grayLo: #{colors.$colors-grayLo};
-  --colors-grayMd: #{colors.$colors-grayMd};
-  --colors-grayHi: #{colors.$colors-grayHi};
-  --colors-green: #{colors.$colors-green};
-  --colors-greenLo: #{colors.$colors-greenLo};
-  --colors-greenMd: #{colors.$colors-greenMd};
-  --colors-greenHi: #{colors.$colors-greenHi};
-  --colors-pink: #{colors.$colors-pink};
-  --colors-pinkLo: #{colors.$colors-pinkLo};
-  --colors-pinkMd: #{colors.$colors-pinkMd};
-  --colors-pinkHi: #{colors.$colors-pinkHi};
-  --colors-purple: #{colors.$colors-purple};
-  --colors-purpleLo: #{colors.$colors-purpleLo};
-  --colors-purpleMd: #{colors.$colors-purpleMd};
-  --colors-purpleHi: #{colors.$colors-purpleHi};
-  --colors-red: #{colors.$colors-red};
-  --colors-redHi: #{colors.$colors-redHi};
-  --colors-redLo: #{colors.$colors-redLo};
-  --colors-redMd: #{colors.$colors-redMd};
-  --colors-rose: #{colors.$colors-rose};
-  --colors-roseHi: #{colors.$colors-roseHi};
-  --colors-roseLo: #{colors.$colors-roseLo};
-  --colors-roseMd: #{colors.$colors-roseMd};
-  --colors-sky: #{colors.$colors-sky};
-  --colors-skyHi: #{colors.$colors-skyHi};
-  --colors-skyLo: #{colors.$colors-skyLo};
-  --colors-skyMd: #{colors.$colors-skyMd};
-  --colors-yellow: #{colors.$colors-yellow};
-  --colors-yellowHi: #{colors.$colors-yellowHi};
-  --colors-yellowLo: #{colors.$colors-yellowLo};
-  --colors-yellowMd: #{colors.$colors-yellowMd};
-  --colors-white: #{colors.$colors-white};
-  --colors-whiteFixed: #{colors.$colors-whiteFixed};
-  --colors-whiteLo: #{colors.$colors-whiteLo};
-  --colors-whiteMd: #{colors.$colors-whiteMd};
-  --colors-whiteHi: #{colors.$colors-whiteHi};
-  --colors-statuses-success: #{colors.$colors-statuses-success};
-  --colors-statuses-successHi: #{colors.$colors-statuses-successHi};
-  --borders-radius-base: #{colors.$borders-radius-base};
-  --borders-style: #{colors.$borders-style};
-  --borders-width: #{colors.$borders-width};
-  --padding-vertical-base: #{colors.$padding-vertical-base}px;
-  --padding-vertical-sm: #{colors.$padding-vertical-sm}px;
-  --padding-vertical-xs: #{colors.$padding-vertical-xs}px;
-  --padding-base: #{colors.$padding-base}px;
-  --padding-sm: #{colors.$padding-sm}px;
-  --padding-xs: #{colors.$padding-xs}px;
-  --size-sm: #{colors.$size-sm};
-  --size-md: #{colors.$size-md};
-  --size-lg: #{colors.$size-lg};
-  --size-xl: #{colors.$size-xl};
-  --size-xxl: #{colors.$size-xxl};
-  --size-xxxl: #{colors.$size-xxxl};
-  --unit: #{colors.$unit};
+  --blue: #{colors.$blue};
 }
