--- a/mage_ai/frontend/styles/scss/modes/_light.scss
+++ b/mage_ai/frontend/styles/scss/modes/_light.scss
@@ -1,142 +1,6 @@
-@use '../abstracts/colors-light' as colors;
+@use '../abstracts/colors/light' as colors;
 
 @mixin light-mode() {
-  --backgrounds-blur: #{colors.$backgrounds-blur};
-  --backgrounds-body: #{colors.$backgrounds-body};
-  --backgrounds-button-base-default: #{colors.$backgrounds-button-base-default};
-  --backgrounds-button-base-hover: #{colors.$backgrounds-button-base-hover};
-  --backgrounds-button-basic-default: #{colors.$backgrounds-button-basic-default};
-  --backgrounds-button-basic-hover: #{colors.$backgrounds-button-basic-hover};
-  --backgrounds-button-primary-default: #{colors.$backgrounds-button-primary-default};
-  --backgrounds-button-primary-hover: #{colors.$backgrounds-button-primary-hover};
-  --backgrounds-button-secondary-default: #{colors.$backgrounds-button-secondary-default};
-  --backgrounds-button-secondary-hover: #{colors.$backgrounds-button-secondary-hover};
-  --backgrounds-input-base-active: #{colors.$backgrounds-input-base-active};
-  --backgrounds-input-base-default: #{colors.$backgrounds-input-base-default};
-  --backgrounds-input-base-focus: #{colors.$backgrounds-input-base-focus};
-  --backgrounds-input-base-hover: #{colors.$backgrounds-input-base-hover};
-  --backgrounds-menu-base-default: #{colors.$backgrounds-menu-base-default};
-  --backgrounds-menu-contained-default: #{colors.$backgrounds-menu-contained-default};
-  --backgrounds-scrollbar-thumb-default: #{colors.$backgrounds-scrollbar-thumb-default};
-  --backgrounds-scrollbar-thumb-hover: #{colors.$backgrounds-scrollbar-thumb-hover};
-  --backgrounds-scrollbar-track-default: #{colors.$backgrounds-scrollbar-track-default};
-  --backgrounds-scrollbar-track-hover: #{colors.$backgrounds-scrollbar-track-hover};
-  --borders-color-base-default: #{colors.$borders-color-base-default};
-  --borders-color-base-hover: #{colors.$borders-color-base-hover};
-  --borders-color-button-base-default: #{colors.$borders-color-button-base-default};
-  --borders-color-button-base-hover: #{colors.$borders-color-button-base-hover};
-  --borders-color-button-basic-default: #{colors.$borders-color-button-basic-default};
-  --borders-color-button-basic-hover: #{colors.$borders-color-button-basic-hover};
-  --borders-color-button-primary-default: #{colors.$borders-color-button-primary-default};
-  --borders-color-button-primary-hover: #{colors.$borders-color-button-primary-hover};
-  --borders-color-button-secondary-default: #{colors.$borders-color-button-secondary-default};
-  --borders-color-button-secondary-hover: #{colors.$borders-color-button-secondary-hover};
-  --borders-color-input-base-active: #{colors.$borders-color-input-base-active};
-  --borders-color-input-base-default: #{colors.$borders-color-input-base-default};
-  --borders-color-input-base-focus: #{colors.$borders-color-input-base-focus};
-  --borders-color-input-base-hover: #{colors.$borders-color-input-base-hover};
-  --borders-color-muted-default: #{colors.$borders-color-muted-default};
-  --borders-color-muted-hover: #{colors.$borders-color-muted-hover};
-  --borders-outline-offset: #{colors.$borders-outline-offset};
-  --borders-outline-width: #{colors.$borders-outline-width};
-  --borders-radius-base: #{colors.$borders-radius-base};
-  --borders-radius-round: #{colors.$borders-radius-round};
-  --borders-radius-sm: #{colors.$borders-radius-sm};
-  --borders-style: #{colors.$borders-style};
-  --borders-width: #{colors.$borders-width};
-  --buttons-border-color-base-default: #{colors.$buttons-border-color-base-default};
-  --buttons-border-color-base-hover: #{colors.$buttons-border-color-base-hover};
-  --buttons-border-color-basic-default: #{colors.$buttons-border-color-basic-default};
-  --buttons-border-color-basic-hover: #{colors.$buttons-border-color-basic-hover};
-  --buttons-border-color-primary-default: #{colors.$buttons-border-color-primary-default};
-  --buttons-border-color-primary-hover: #{colors.$buttons-border-color-primary-hover};
-  --buttons-border-color-secondary-default: #{colors.$buttons-border-color-secondary-default};
-  --buttons-border-color-secondary-hover: #{colors.$buttons-border-color-secondary-hover};
-  --buttons-grid-column-gap-base: #{colors.$buttons-grid-column-gap-base};
-  --buttons-grid-column-gap-sm: #{colors.$buttons-grid-column-gap-sm};
-  --buttons-outline-color-base-default: #{colors.$buttons-outline-color-base-default};
-  --buttons-outline-color-base-hover: #{colors.$buttons-outline-color-base-hover};
-  --buttons-outline-color-basic-default: #{colors.$buttons-outline-color-basic-default};
-  --buttons-outline-color-basic-hover: #{colors.$buttons-outline-color-basic-hover};
-  --buttons-outline-color-primary-default: #{colors.$buttons-outline-color-primary-default};
-  --buttons-outline-color-primary-hover: #{colors.$buttons-outline-color-primary-hover};
-  --buttons-outline-color-secondary-default: #{colors.$buttons-outline-color-secondary-default};
-  --buttons-outline-color-secondary-hover: #{colors.$buttons-outline-color-secondary-hover};
-  --buttons-padding-base: #{colors.$buttons-padding-base};
-  --buttons-padding-sm: #{colors.$buttons-padding-sm};
-  --buttons-padding-xs: #{colors.$buttons-padding-xs};
-  --fonts-color-button-base: #{colors.$fonts-color-button-base};
-  --fonts-color-text-base: #{colors.$fonts-color-text-base};
-  --fonts-color-text-blue: #{colors.$fonts-color-text-blue};
-  --fonts-color-text-inverted: #{colors.$fonts-color-text-inverted};
-  --fonts-color-text-muted: #{colors.$fonts-color-text-muted};
-  --fonts-color-text-warning: #{colors.$fonts-color-text-warning};
-  --fonts-family-base-black: #{colors.$fonts-family-base-black};
-  --fonts-family-base-bold: #{colors.$fonts-family-base-bold};
-  --fonts-family-base-lightfont: #{colors.$fonts-family-base-lightfont};
-  --fonts-family-base-medium: #{colors.$fonts-family-base-medium};
-  --fonts-family-base-regular: #{colors.$fonts-family-base-regular};
-  --fonts-family-base-semibold: #{colors.$fonts-family-base-semibold};
-  --fonts-family-monospace-black: #{colors.$fonts-family-monospace-black};
-  --fonts-family-monospace-bold: #{colors.$fonts-family-monospace-bold};
-  --fonts-family-monospace-bolditalic: #{colors.$fonts-family-monospace-bolditalic};
-  --fonts-family-monospace-lightfont: #{colors.$fonts-family-monospace-lightfont};
-  --fonts-family-monospace-medium: #{colors.$fonts-family-monospace-medium};
-  --fonts-family-monospace-regular: #{colors.$fonts-family-monospace-regular};
-  --fonts-family-monospace-regularitalic: #{colors.$fonts-family-monospace-regularitalic};
-  --fonts-family-monospace-semibold: #{colors.$fonts-family-monospace-semibold};
-  --fonts-lineheight-base: #{colors.$fonts-lineheight-base};
-  --fonts-lineheight-md: #{colors.$fonts-lineheight-md};
-  --fonts-lineheight-monospace: #{colors.$fonts-lineheight-monospace};
-  --fonts-lineheight-sm: #{colors.$fonts-lineheight-sm};
-  --fonts-lineheight-xs: #{colors.$fonts-lineheight-xs};
-  --fonts-size-base: #{colors.$fonts-size-base};
-  --fonts-size-sm: #{colors.$fonts-size-sm};
-  --fonts-size-xs: #{colors.$fonts-size-xs};
-  --fonts-style-base: #{colors.$fonts-style-base};
-  --fonts-style-italic: #{colors.$fonts-style-italic};
-  --fonts-weight: #{colors.$fonts-weight};
-  --grid-gutter-width-base: #{colors.$grid-gutter-width-base};
-  --grid-gutter-width-sm: #{colors.$grid-gutter-width-sm};
-  --grid-gutter-width-xs: #{colors.$grid-gutter-width-xs};
-  --icons-color-base: #{colors.$icons-color-base};
-  --icons-color-inverted: #{colors.$icons-color-inverted};
-  --icons-size-base: #{colors.$icons-size-base};
-  --icons-size-sm: #{colors.$icons-size-sm};
-  --icons-size-xs: #{colors.$icons-size-xs};
-  --inputs-background-base-active: #{colors.$inputs-background-base-active};
-  --inputs-background-base-default: #{colors.$inputs-background-base-default};
-  --inputs-background-base-focus: #{colors.$inputs-background-base-focus};
-  --inputs-background-base-hover: #{colors.$inputs-background-base-hover};
-  --inputs-border-color-base-active: #{colors.$inputs-border-color-base-active};
-  --inputs-border-color-base-default: #{colors.$inputs-border-color-base-default};
-  --inputs-border-color-base-focus: #{colors.$inputs-border-color-base-focus};
-  --inputs-border-color-base-hover: #{colors.$inputs-border-color-base-hover};
-  --inputs-border-radius-base: #{colors.$inputs-border-radius-base};
-  --inputs-border-style-base: #{colors.$inputs-border-style-base};
-  --inputs-border-width-base: #{colors.$inputs-border-width-base};
-  --inputs-padding-base: #{colors.$inputs-padding-base};
-  --inputs-padding-sm: #{colors.$inputs-padding-sm};
-  --inputs-placeholder-color: #{colors.$inputs-placeholder-color};
-  --margin-base: #{colors.$margin-base};
-  --margin-sm: #{colors.$margin-sm};
-  --margin-xs: #{colors.$margin-xs};
-  --menus-background-base-default: #{colors.$menus-background-base-default};
-  --menus-background-contained-default: #{colors.$menus-background-contained-default};
-  --menus-blur-base: #{colors.$menus-blur-base};
-  --menus-border-radius-base: #{colors.$menus-border-radius-base};
-  --menus-padding-base: #{colors.$menus-padding-base};
-  --padding-base: #{colors.$padding-base};
-  --padding-sm: #{colors.$padding-sm};
-  --padding-xs: #{colors.$padding-xs};
-  --scrollbars-background-thumb-default: #{colors.$scrollbars-background-thumb-default};
-  --scrollbars-background-thumb-hover: #{colors.$scrollbars-background-thumb-hover};
-  --scrollbars-background-track-default: #{colors.$scrollbars-background-track-default};
-  --scrollbars-background-track-hover: #{colors.$scrollbars-background-track-hover};
-  --scrollbars-border-radius-thumb: #{colors.$scrollbars-border-radius-thumb};
-  --scrollbars-border-radius-track: #{colors.$scrollbars-border-radius-track};
-  --scrollbars-width-thumb: #{colors.$scrollbars-width-thumb};
-  --scrollbars-width-track: #{colors.$scrollbars-width-track};
   --colors-black: #{colors.$colors-black};
   --colors-blackfixed: #{colors.$colors-blackfixed};
   --colors-blacklo: #{colors.$colors-blacklo};
@@ -195,6 +59,58 @@
   --colors-whitelo: #{colors.$colors-whitelo};
   --colors-whitemd: #{colors.$colors-whitemd};
   --colors-whitehi: #{colors.$colors-whitehi};
+  --backgrounds-blur: #{colors.$backgrounds-blur};
+  --backgrounds-body: #{colors.$backgrounds-body};
+  --backgrounds-button-base-default: #{colors.$backgrounds-button-base-default};
+  --backgrounds-button-base-hover: #{colors.$backgrounds-button-base-hover};
+  --backgrounds-button-basic-default: #{colors.$backgrounds-button-basic-default};
+  --backgrounds-button-basic-hover: #{colors.$backgrounds-button-basic-hover};
+  --backgrounds-button-primary-default: #{colors.$backgrounds-button-primary-default};
+  --backgrounds-button-primary-hover: #{colors.$backgrounds-button-primary-hover};
+  --backgrounds-button-secondary-default: #{colors.$backgrounds-button-secondary-default};
+  --backgrounds-button-secondary-hover: #{colors.$backgrounds-button-secondary-hover};
+  --backgrounds-input-base-active: #{colors.$backgrounds-input-base-active};
+  --backgrounds-input-base-default: #{colors.$backgrounds-input-base-default};
+  --backgrounds-input-base-focus: #{colors.$backgrounds-input-base-focus};
+  --backgrounds-input-base-hover: #{colors.$backgrounds-input-base-hover};
+  --backgrounds-menu-base-default: #{colors.$backgrounds-menu-base-default};
+  --backgrounds-menu-contained-default: #{colors.$backgrounds-menu-contained-default};
+  --backgrounds-scrollbar-thumb-default: #{colors.$backgrounds-scrollbar-thumb-default};
+  --backgrounds-scrollbar-thumb-hover: #{colors.$backgrounds-scrollbar-thumb-hover};
+  --backgrounds-scrollbar-track-default: #{colors.$backgrounds-scrollbar-track-default};
+  --backgrounds-scrollbar-track-hover: #{colors.$backgrounds-scrollbar-track-hover};
+  --borders-color-base-default: #{colors.$borders-color-base-default};
+  --borders-color-base-hover: #{colors.$borders-color-base-hover};
+  --borders-color-button-base-default: #{colors.$borders-color-button-base-default};
+  --borders-color-button-base-hover: #{colors.$borders-color-button-base-hover};
+  --borders-color-button-basic-default: #{colors.$borders-color-button-basic-default};
+  --borders-color-button-basic-hover: #{colors.$borders-color-button-basic-hover};
+  --borders-color-button-primary-default: #{colors.$borders-color-button-primary-default};
+  --borders-color-button-primary-hover: #{colors.$borders-color-button-primary-hover};
+  --borders-color-button-secondary-default: #{colors.$borders-color-button-secondary-default};
+  --borders-color-button-secondary-hover: #{colors.$borders-color-button-secondary-hover};
+  --borders-color-input-base-active: #{colors.$borders-color-input-base-active};
+  --borders-color-input-base-default: #{colors.$borders-color-input-base-default};
+  --borders-color-input-base-focus: #{colors.$borders-color-input-base-focus};
+  --borders-color-input-base-hover: #{colors.$borders-color-input-base-hover};
+  --borders-color-muted-default: #{colors.$borders-color-muted-default};
+  --borders-color-muted-hover: #{colors.$borders-color-muted-hover};
+  --buttons-border-color-base-default: #{colors.$buttons-border-color-base-default};
+  --buttons-border-color-base-hover: #{colors.$buttons-border-color-base-hover};
+  --buttons-border-color-basic-default: #{colors.$buttons-border-color-basic-default};
+  --buttons-border-color-basic-hover: #{colors.$buttons-border-color-basic-hover};
+  --buttons-border-color-primary-default: #{colors.$buttons-border-color-primary-default};
+  --buttons-border-color-primary-hover: #{colors.$buttons-border-color-primary-hover};
+  --buttons-border-color-secondary-default: #{colors.$buttons-border-color-secondary-default};
+  --buttons-border-color-secondary-hover: #{colors.$buttons-border-color-secondary-hover};
+  --buttons-outline-color-base-default: #{colors.$buttons-outline-color-base-default};
+  --buttons-outline-color-base-hover: #{colors.$buttons-outline-color-base-hover};
+  --buttons-outline-color-basic-default: #{colors.$buttons-outline-color-basic-default};
+  --buttons-outline-color-basic-hover: #{colors.$buttons-outline-color-basic-hover};
+  --buttons-outline-color-primary-default: #{colors.$buttons-outline-color-primary-default};
+  --buttons-outline-color-primary-hover: #{colors.$buttons-outline-color-primary-hover};
+  --buttons-outline-color-secondary-default: #{colors.$buttons-outline-color-secondary-default};
+  --buttons-outline-color-secondary-hover: #{colors.$buttons-outline-color-secondary-hover};
   --colors-backgrounds-blur: #{colors.$colors-backgrounds-blur};
   --colors-backgrounds-body: #{colors.$colors-backgrounds-body};
   --colors-backgrounds-button-base-default: #{colors.$colors-backgrounds-button-base-default};
@@ -249,20 +165,28 @@
   --colors-typography-text-blue: #{colors.$colors-typography-text-blue};
   --colors-typography-text-inverted: #{colors.$colors-typography-text-inverted};
   --colors-typography-text-muted: #{colors.$colors-typography-text-muted};
-  --borders-radius-base: #{colors.$borders-radius-base};
-  --borders-style: #{colors.$borders-style};
-  --borders-width: #{colors.$borders-width};
-  --padding-vertical-base: #{colors.$padding-vertical-base}px;
-  --padding-vertical-sm: #{colors.$padding-vertical-sm}px;
-  --padding-vertical-xs: #{colors.$padding-vertical-xs}px;
-  --padding-base: #{colors.$padding-base}px;
-  --padding-sm: #{colors.$padding-sm}px;
-  --padding-xs: #{colors.$padding-xs}px;
-  --size-sm: #{colors.$size-sm};
-  --size-md: #{colors.$size-md};
-  --size-lg: #{colors.$size-lg};
-  --size-xl: #{colors.$size-xl};
-  --size-xxl: #{colors.$size-xxl};
-  --size-xxxl: #{colors.$size-xxxl};
-  --unit: #{colors.$unit};
+  --fonts-color-button-base: #{colors.$fonts-color-button-base};
+  --fonts-color-text-base: #{colors.$fonts-color-text-base};
+  --fonts-color-text-blue: #{colors.$fonts-color-text-blue};
+  --fonts-color-text-inverted: #{colors.$fonts-color-text-inverted};
+  --fonts-color-text-muted: #{colors.$fonts-color-text-muted};
+  --fonts-color-text-warning: #{colors.$fonts-color-text-warning};
+  --icons-color-base: #{colors.$icons-color-base};
+  --icons-color-inverted: #{colors.$icons-color-inverted};
+  --inputs-background-base-active: #{colors.$inputs-background-base-active};
+  --inputs-background-base-default: #{colors.$inputs-background-base-default};
+  --inputs-background-base-focus: #{colors.$inputs-background-base-focus};
+  --inputs-background-base-hover: #{colors.$inputs-background-base-hover};
+  --inputs-border-color-base-active: #{colors.$inputs-border-color-base-active};
+  --inputs-border-color-base-default: #{colors.$inputs-border-color-base-default};
+  --inputs-border-color-base-focus: #{colors.$inputs-border-color-base-focus};
+  --inputs-border-color-base-hover: #{colors.$inputs-border-color-base-hover};
+  --inputs-placeholder-color: #{colors.$inputs-placeholder-color};
+  --menus-background-base-default: #{colors.$menus-background-base-default};
+  --menus-background-contained-default: #{colors.$menus-background-contained-default};
+  --menus-blur-base: #{colors.$menus-blur-base};
+  --scrollbars-background-thumb-default: #{colors.$scrollbars-background-thumb-default};
+  --scrollbars-background-thumb-hover: #{colors.$scrollbars-background-thumb-hover};
+  --scrollbars-background-track-default: #{colors.$scrollbars-background-track-default};
+  --scrollbars-background-track-hover: #{colors.$scrollbars-background-track-hover};
 }
